# my_project_clone

./: CMakeLists.txt  main.cpp
TestTask/libs/gui_gist/: CMakeLists.txt
TestTask/libs/gui_gist/include/gui_gist/: gui_gist.h
TestTask/libs/gui_gist/source/: gui_gist.cpp
TestTask/libs/gui_gist/test/: gui_gist_test.cpp
TestTask/libs/idz_gist/: CMakeLists.txt  CMakeLists.txt.autosave
TestTask/libs/idz_gist/include/idz_gist/: idz_gist.h  random_base_data.h
TestTask/libs/idz_gist/include/random_base_data/: random_base_data.cpp  random_base_data.cpp.autosave
TestTask/libs/printer/include/printer/: printer.h
TestTask/libs/qeneri_rand_num/: CMakeLists.txt  CMakeLists.txt.autosave
TestTask/libs/qeneri_rand_num/include/qeneri_rand_num/: qeneri_rand_num.h
TestTask/libs/qeneri_rand_num/source/: qeneri_rand_num.cpp
TestTask/libs/qeneri_rand_num/test/: qeneri_rand_num_test.cpp
TestTask/libs/qeneri_rand_num2/: CMakeLists.txt  unittest.cmake
TestTask/libs/qeneri_rand_num2/include/qeneri_rand_num2/: qeneri_rand_num2.h
TestTask/libs/qeneri_rand_num2/source/: qeneri_rand_num2.cpp
TestTask/libs/qeneri_rand_num2/test/: hist.cpp  hist.h  qeneri_rand_num_test.cpp
